--- a/InventoryApp/Views/Admin/ManageUser.cshtml
+++ b/InventoryApp/Views/Admin/ManageUser.cshtml
@@ -137,7 +137,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-database-compat.js"></script>
 
-<script>
+<script type="text/javascript">
     
     const firebaseConfig = {
         // databaseURL: "https://inventorymanageuserdb-default-rtdb.asia-southeast1.firebasedatabase.app"
@@ -145,16 +145,16 @@
     }
     firebase.initializeApp(firebaseConfig)
     const database = firebase.database();
-    
+
     //const dataContainer = document.querySelector('tbody');
-    
+
     // fetch data
     var fetchedData = database.ref('inventory-user/');
     fetchedData.on('value', (snapshot) => {
         var data = snapshot.val();
         var no = 0;
         var htmlData = '';
-        
+
         for (var key in data) {
             var value = data[key];
             htmlData += `
@@ -171,12 +171,15 @@
                     </td>
                 </tr>
             `;
-            
+
         }
         
-        document.querySelector('.num-notification').textContent = snapshot.numChildren();
+        var numChild = snapshot.numChildren();
+        
+        numChild > 0 ? document.querySelector('.total').textContent = numChild : document.querySelector('.total').textContent = 0;
+
         document.querySelector('tbody').innerHTML = htmlData;
-    })
+    });
 
     $(document).ready(function() {
         $('.manageUserSubNav').addClass('active');
