--- a/InventoryApp/Views/Login/ViewLogin.cshtml
+++ b/InventoryApp/Views/Login/ViewLogin.cshtml
@@ -93,7 +93,7 @@
         </form>
 
     </div>
-    <img src="~/logo/shadow.png" style="width: 100%; margin-top: -15px"/>
+    <img src="~/logo/shadow.png" style="width: 100%; margin-top: -15px" alt=""/>
     <!-- /.login-box-body -->
 </div>
 <!-- /.login-box -->
@@ -291,8 +291,8 @@
                         $('option:nth-child(2)').attr('selected', true);
                     }
                 }
-            })
-        })
+            });
+        });
     </script>
 
 </body>
