--- a/InventoryApp/Views/Admin/InvLog.cshtml
+++ b/InventoryApp/Views/Admin/InvLog.cshtml
@@ -164,7 +164,7 @@
             dataType: 'JSON',
             data: {type: $('#type').val(), cpmName: $('#company option:selected').text(), dateFrom: $('#dateFrom').val(), dateTo: $('#fromTo').val()},
             beforeSend: function () {
-                console.log("Loading...");
+                setTimer();
             },
             success: function (data) {
                 //console.log(data);
@@ -174,6 +174,7 @@
                         $('#tblInventoryLog').html('');
                     }
                     $('#tblInventoryLog').html('<h4 class="text-danger text-center">No matching records found!</h4>')
+                    resetTimer();
                 } else {
                     $('#tblInventoryLog').html('');
                     listInventoryLog = [];
@@ -223,6 +224,8 @@
                         // How can I set the row color as red?
                         $(this).addClass('bg-green').siblings().removeClass('bg-green');
                     });
+                    
+                    resetTimer();
                 }
                 
             }
