--- a/InventoryApp/Views/Shared/_AdminLayout.cshtml
+++ b/InventoryApp/Views/Shared/_AdminLayout.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="~/assets/dist/css/skins/_all-skins.min.css">
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link href="~/assets/dist/css/stylesheet.css" rel="stylesheet"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
